# consensus_onchain

./: Anchor.toml  README.md  package-lock.json  package.json
migrations/: deploy.ts
programs/consensus_onchain/: Cargo.toml
programs/consensus_onchain/src/: lib.rs
programs/consensus_onchain/src/errors/: error.rs
programs/consensus_onchain/src/instructions/: claim.rs  initialize.rs  mod.rs  update.rs  upload_badge.rs  upload_validation.rs  withdraw.rs
programs/consensus_onchain/src/states/: badge.rs  claim.rs  consensus.rs  mod.rs
programs/consensus_onchain/src/utils/: ed25519.rs  mod.rs
tests/: consensus_onchain.ts
