[package]
name = "consensus_onchain"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "consensus_onchain"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build",]

[dependencies]
anchor-lang = { version ="0.30.1", features = [
    "init-if-needed",
]}
anchor-spl = "0.30.1"
solana-program = "1.18.17"
serde_json = "1.0"
serde = "1.0.202"
hex = "0.4.3"